debugbar.css: fix broken CSS (#675)
is broken since this change: https://github.com/maximebf/php-debugbar/commit/cd46685df82a370f6682ad92a81adfc44326f438#diff-f8b1773a74ff6db4b152bc60684f28e27084381920026052bac436b09db55d31L173 

@nckrtl

--- a/src/DebugBar/Resources/debugbar.css
+++ b/src/DebugBar/Resources/debugbar.css
@@ -169,7 +169,7 @@ div.phpdebugbar-header-right > select {
 /* -------------------------------------- */
 
 span.phpdebugbar-indicator,
-a.phpdebugbar-indicator,
+a.phpdebugbar-indicator
 {
   border-right: 1px solid #ddd;
 }
